--- a/paid.css
+++ b/paid.css
@@ -1,79 +1,86 @@
 body {
   background-color: rgba(0, 0, 0, 0.93);
- 
 }
 
-a {
-  font-size: 30px;
-  color: white;
-  transition: margin-left 6s, font-family 6s;
-}
 a:hover {
   margin-left: 200px;
   margin-bottom: 100px;
   font-size: 35px;
   color: crimson;
   font-family: fantasy;
+  height:200px;
+}
+a {
+  width: 50%;
+  font-size: 30px;
+  color: white;
+  transition: margin-left 3s, font-family 1s, transform 3s;
+  overflow: visible;
 }
 
 li {
   border: 2px solid rgba(20, 10, 90, 0.8);
   border-radius: 30px;
-  transition: border 2s, border-radius 2s;
-  margin-bottom:20px;
+  transition: border 2s, border-radius 2s, transform 2s, margin-left 3s;
+  margin-bottom: 20px;
+  background: transparent;
 }
 
 li:hover {
+  
   border: 9px solid rgba(30, 5, 90, 0.8);
   border-radius: 50px;
   background: white;
+  background-image: url(https://statics.sportskeeda.com/editor/2018/03/a4a7b-1520474015-800.jpg);
+  background:cover;
+}
+
+li:nth-child(1) {
 }
 
 ul {
-    border: 8px solid rgba(20, 10, 90, 0.6);
-    border-radius:30px;
+  border: 8px solid rgba(20, 10, 90, 0.6);
+  border-radius: 30px;
   font-size: 40px;
   color: blue;
-  margin-left:5px;
+  margin-left: 5px;
   list-style: none;
- margin-left:67px;
- 
+  margin-left: 67px;
 }
 @keyframes colorwheel {
   25% {
     color: red;
-   border: 8px solid rgba(50, 0, 0, 0.75);
+    border: 8px solid rgba(50, 0, 0, 0.75);
     text-shadow: 10px 15px rgba(0, 0, 0, 0.8);
-    width:37.5px;
-    font-size:30px ;
+    width: 37.5px;
+    font-size: 20px;
   }
   50% {
     color: white;
-    border: 8px solid rgba(50, 0, 0, 0.50);
-    width:40px;
-    font-size:25px ;
+    border: 8px solid rgba(50, 0, 0, 0.5);
+    width: 40px;
+    font-size: 25px;
   }
   75% {
     color: blue;
     border: 8px solid rgba(50, 0, 0, 0.25);
-    width:45px;
-    font-size:20px ;
+    width: 45px;
+    font-size: 30px;
   }
 }
 
-.border{
-    border:8px solid red;
-    border-radius: 20px;
-    color:purple;
-   text-orientation: upright;
-   writing-mode: vertical-lr;
-   font-size:35px ;
-   width: 50px;
-   height: 400px;
-  float:left;
-  font-family:Arial Black;
-  font-weight:;
-  
-  animation:colorwheel 9s linear;
+.border {
+  border: 8px solid red;
+  border-radius: 20px;
+  color: purple;
+  text-orientation: upright;
+  writing-mode: vertical-lr;
+  font-size: 35px;
+  width: 50px;
+  height: 400px;
+  float: left;
+  font-family: Arial Black;
+  font-weight: ;
 
+  animation: colorwheel 9s;
 }
